--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "groq": "^4.2.0",
     "groq-sdk": "^0.29.0",
     "mysql": "^2.18.1",
+    "mysql2": "^3.14.3",
     "nodemon": "^3.1.10"
   }
 }
