--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
+    "express-status-monitor": "^1.3.4",
     "groq": "^4.2.0",
     "groq-sdk": "^0.29.0",
     "mysql": "^2.18.1",
